# sse_wilson_dslash

./: Makefile.in  NEWS  configure  configure.ac
include/: Makefile.am  Makefile.in  decomp.h  decomp_hvv.h  dispatch_parscalar.h  dispatch_scalar.h  mvv_recons.h  mvv_recons_32bit.h  mvv_recons_64bit.h  recons.h  shift_tables_parscalar.h  shift_tables_scalar.h  site_dslash_32bit_scalar.h  site_dslash_64bit_scalar.h  sse32.h  sse64.h  sse_align.h  sse_config_internal.h.in  sse_dslash.h  sse_dslash_3d.h  sse_dslash_qdp_packer.h  sse_dslash_qdp_packer_3d.h  types32.h  types64.h
lib/: Makefile.am  Makefile.in  decomp_32bit_parscalar.c  decomp_64bit_parscalar.c  decomp_hvv_32bit_parscalar.c  decomp_hvv_64bit_parscalar.c  dispatch_parscalar.c  dispatch_scalar.c  mvv_recons_32bit_parscalar.c  mvv_recons_64bit_parscalar.c  packer_nopad.c  packer_p4_pad.c  recons_32bit_parscalar.c  recons_64bit_parscalar.c  shift_tables_parscalar.c  shift_tables_parscalar_3d.c  shift_tables_scalar.c  shift_tables_scalar_3d.c  site_dslash_32bit_scalar.c  sse_su3dslash_32bit_parscalar.c  sse_su3dslash_32bit_parscalar_3d.c  sse_su3dslash_32bit_scalar.c  sse_su3dslash_32bit_scalar_3d.c  sse_su3dslash_64bit_parscalar.c  sse_su3dslash_64bit_parscalar_3d.c  sse_su3dslash_64bit_scalar.c  sse_su3dslash_64bit_scalar_3d.c
tests/: Makefile.am  Makefile.in  dslash_3d_w.cc  reunit.cc  t_dslash.cc  t_dslash_3d.cc  t_dslash_parscalar.cc  t_dslash_scalar.cc  t_site_ops_parscalar.cc  testDecomp32bit.cc  testDecomp64bit.cc  testDecompHvv32bit.cc  testDslash3D.cc  testDslashFull.cc  testMvvRecons.h  testMvvRecons32bit.cc  testMvvRecons64bit.cc  testRecons32bit.cc  testRecons64bit.cc  testSiteDslash32bit.cc  testvol.h  timeDslash.cc  timeDslash3D.cc  time_dslash.cc  time_dslash_3d.cc  unittest.h
